// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots CurrencyCard Style Presets 1`] = `
<View
  onLayout={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "#f0f0f0",
        "flex": 1,
      },
      Object {
        "paddingBottom": 0,
      },
    ]
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <RCTScrollView>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#eee",
            }
          }
        >
          <View
            style={
              Object {
                "borderBottomColor": "#e6e6e6",
                "borderBottomWidth": 1,
                "paddingBottom": 10,
                "paddingHorizontal": 10,
                "paddingTop": 20,
              }
            }
          >
            <View
              style={
                Object {
                  "borderTopColor": "#e6e6e6",
                  "borderTopWidth": 1,
                  "flexDirection": "row",
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#666",
                    "fontSize": 10,
                    "paddingBottom": 2,
                    "paddingHorizontal": 4,
                  }
                }
              >
                Use Case
              </Text>
            </View>
            <View
              style={Object {}}
            >
              <Text
                style={
                  Object {
                    "color": "#3d3d3d",
                    "fontWeight": "600",
                  }
                }
              >
                Primary
              </Text>
            </View>
            <Text
              style={
                Object {
                  "color": "#666",
                  "fontSize": 10,
                  "paddingTop": 0,
                }
              }
            >
              The primary.
            </Text>
          </View>
          <View
            style={
              Object {
                "backgroundColor": "#fff",
                "padding": 10,
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "marginVertical": 10,
                    "paddingHorizontal": 10,
                  },
                  undefined,
                ]
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "borderRadius": 5,
                      "flexDirection": "row",
                      "justifyContent": "space-between",
                      "paddingHorizontal": 20,
                      "paddingVertical": 10,
                    },
                    Object {
                      "backgroundColor": "#40BFC0",
                    },
                  ]
                }
              >
                <Text
                  style={
                    Object {
                      "color": "#C04040",
                      "fontFamily": "Montserrat",
                      "fontSize": 15,
                    }
                  }
                >
                  ios
                </Text>
                <Text
                  style={
                    Object {
                      "color": "#C04040",
                      "fontFamily": "Montserrat",
                      "fontSize": 15,
                      "marginLeft": 10,
                    }
                  }
                >
                  test
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </View>
</View>
`;

exports[`Storyshots Text Passing Content 1`] = `
<View
  onLayout={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "#f0f0f0",
        "flex": 1,
      },
      Object {
        "paddingBottom": 0,
      },
    ]
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <RCTScrollView>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#eee",
            }
          }
        >
          <View
            style={
              Object {
                "borderBottomColor": "#e6e6e6",
                "borderBottomWidth": 1,
                "paddingBottom": 10,
                "paddingHorizontal": 10,
                "paddingTop": 20,
              }
            }
          >
            <View
              style={
                Object {
                  "borderTopColor": "#e6e6e6",
                  "borderTopWidth": 1,
                  "flexDirection": "row",
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#666",
                    "fontSize": 10,
                    "paddingBottom": 2,
                    "paddingHorizontal": 4,
                  }
                }
              >
                Use Case
              </Text>
            </View>
            <View
              style={Object {}}
            >
              <Text
                style={
                  Object {
                    "color": "#3d3d3d",
                    "fontWeight": "600",
                  }
                }
              >
                text
              </Text>
            </View>
            <Text
              style={
                Object {
                  "color": "#666",
                  "fontSize": 10,
                  "paddingTop": 0,
                }
              }
            >
              Used when you want to pass a value but don't want to open a child.
            </Text>
          </View>
          <View
            style={
              Object {
                "backgroundColor": "#fff",
                "padding": 10,
              }
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "#1d1d1d",
                  "flex": 1,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#ffffff",
                    "fontFamily": "Montserrat",
                    "fontSize": 15,
                  }
                }
              >
                Heyo!
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "backgroundColor": "#eee",
            }
          }
        >
          <View
            style={
              Object {
                "borderBottomColor": "#e6e6e6",
                "borderBottomWidth": 1,
                "paddingBottom": 10,
                "paddingHorizontal": 10,
                "paddingTop": 20,
              }
            }
          >
            <View
              style={
                Object {
                  "borderTopColor": "#e6e6e6",
                  "borderTopWidth": 1,
                  "flexDirection": "row",
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#666",
                    "fontSize": 10,
                    "paddingBottom": 2,
                    "paddingHorizontal": 4,
                  }
                }
              >
                Use Case
              </Text>
            </View>
            <View
              style={Object {}}
            >
              <Text
                style={
                  Object {
                    "color": "#3d3d3d",
                    "fontWeight": "600",
                  }
                }
              >
                tx
              </Text>
            </View>
            <Text
              style={
                Object {
                  "color": "#666",
                  "fontSize": 10,
                  "paddingTop": 0,
                }
              }
            >
              Used for looking up i18n keys.
            </Text>
          </View>
          <View
            style={
              Object {
                "backgroundColor": "#fff",
                "padding": 10,
              }
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "#1d1d1d",
                  "flex": 1,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#ffffff",
                    "fontFamily": "Montserrat",
                    "fontSize": 15,
                  }
                }
              >
                common.ok.test
              </Text>
              <Text
                style={
                  Object {
                    "color": "#ffffff",
                    "fontFamily": "Montserrat",
                    "fontSize": 15,
                  }
                }
              >
                common.cancel.test
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "backgroundColor": "#eee",
            }
          }
        >
          <View
            style={
              Object {
                "borderBottomColor": "#e6e6e6",
                "borderBottomWidth": 1,
                "paddingBottom": 10,
                "paddingHorizontal": 10,
                "paddingTop": 20,
              }
            }
          >
            <View
              style={
                Object {
                  "borderTopColor": "#e6e6e6",
                  "borderTopWidth": 1,
                  "flexDirection": "row",
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#666",
                    "fontSize": 10,
                    "paddingBottom": 2,
                    "paddingHorizontal": 4,
                  }
                }
              >
                Use Case
              </Text>
            </View>
            <View
              style={Object {}}
            >
              <Text
                style={
                  Object {
                    "color": "#3d3d3d",
                    "fontWeight": "600",
                  }
                }
              >
                children
              </Text>
            </View>
            <Text
              style={
                Object {
                  "color": "#666",
                  "fontSize": 10,
                  "paddingTop": 0,
                }
              }
            >
              Used like you would normally use a React Native &lt;Text&gt; component.
            </Text>
          </View>
          <View
            style={
              Object {
                "backgroundColor": "#fff",
                "padding": 10,
              }
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "#1d1d1d",
                  "flex": 1,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#ffffff",
                    "fontFamily": "Montserrat",
                    "fontSize": 15,
                  }
                }
              >
                Passing strings as children.
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "backgroundColor": "#eee",
            }
          }
        >
          <View
            style={
              Object {
                "borderBottomColor": "#e6e6e6",
                "borderBottomWidth": 1,
                "paddingBottom": 10,
                "paddingHorizontal": 10,
                "paddingTop": 20,
              }
            }
          >
            <View
              style={
                Object {
                  "borderTopColor": "#e6e6e6",
                  "borderTopWidth": 1,
                  "flexDirection": "row",
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#666",
                    "fontSize": 10,
                    "paddingBottom": 2,
                    "paddingHorizontal": 4,
                  }
                }
              >
                Use Case
              </Text>
            </View>
            <View
              style={Object {}}
            >
              <Text
                style={
                  Object {
                    "color": "#3d3d3d",
                    "fontWeight": "600",
                  }
                }
              >
                nested children
              </Text>
            </View>
            <Text
              style={
                Object {
                  "color": "#666",
                  "fontSize": 10,
                  "paddingTop": 0,
                }
              }
            >
              You can embed them and change styles too.
            </Text>
          </View>
          <View
            style={
              Object {
                "backgroundColor": "#fff",
                "padding": 10,
              }
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "#1d1d1d",
                  "flex": 1,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#ffffff",
                    "fontFamily": "Montserrat",
                    "fontSize": 15,
                  }
                }
              >
                 
                Hello 
                <Text
                  style={
                    Object {
                      "color": "#ffffff",
                      "fontFamily": "Montserrat",
                      "fontSize": 15,
                      "fontWeight": "bold",
                    }
                  }
                >
                  bolded
                </Text>
                 World.
              </Text>
            </View>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </View>
</View>
`;

exports[`Storyshots Text Style Presets 1`] = `
<View
  onLayout={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "#f0f0f0",
        "flex": 1,
      },
      Object {
        "paddingBottom": 0,
      },
    ]
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <RCTScrollView>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#eee",
            }
          }
        >
          <View
            style={
              Object {
                "borderBottomColor": "#e6e6e6",
                "borderBottomWidth": 1,
                "paddingBottom": 10,
                "paddingHorizontal": 10,
                "paddingTop": 20,
              }
            }
          >
            <View
              style={
                Object {
                  "borderTopColor": "#e6e6e6",
                  "borderTopWidth": 1,
                  "flexDirection": "row",
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#666",
                    "fontSize": 10,
                    "paddingBottom": 2,
                    "paddingHorizontal": 4,
                  }
                }
              >
                Use Case
              </Text>
            </View>
            <View
              style={Object {}}
            >
              <Text
                style={
                  Object {
                    "color": "#3d3d3d",
                    "fontWeight": "600",
                  }
                }
              >
                default
              </Text>
            </View>
            <Text
              style={
                Object {
                  "color": "#666",
                  "fontSize": 10,
                  "paddingTop": 0,
                }
              }
            >
              Used for normal body text.
            </Text>
          </View>
          <View
            style={
              Object {
                "backgroundColor": "#fff",
                "padding": 10,
              }
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "#1d1d1d",
                  "flex": 1,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#ffffff",
                    "fontFamily": "Montserrat",
                    "fontSize": 15,
                  }
                }
              >
                Hello!
              </Text>
              <Text
                style={
                  Object {
                    "color": "#ffffff",
                    "fontFamily": "Montserrat",
                    "fontSize": 15,
                    "paddingTop": 10,
                  }
                }
              >
                Check out
                

                my
                

                line height
              </Text>
              <Text
                style={
                  Object {
                    "color": "#ffffff",
                    "fontFamily": "Montserrat",
                    "fontSize": 15,
                    "paddingTop": 10,
                  }
                }
              >
                The quick brown fox jumped over the slow lazy dog.
              </Text>
              <Text
                style={
                  Object {
                    "color": "#ffffff",
                    "fontFamily": "Montserrat",
                    "fontSize": 15,
                  }
                }
              >
                $123,456,789.00
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "backgroundColor": "#eee",
            }
          }
        >
          <View
            style={
              Object {
                "borderBottomColor": "#e6e6e6",
                "borderBottomWidth": 1,
                "paddingBottom": 10,
                "paddingHorizontal": 10,
                "paddingTop": 20,
              }
            }
          >
            <View
              style={
                Object {
                  "borderTopColor": "#e6e6e6",
                  "borderTopWidth": 1,
                  "flexDirection": "row",
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#666",
                    "fontSize": 10,
                    "paddingBottom": 2,
                    "paddingHorizontal": 4,
                  }
                }
              >
                Use Case
              </Text>
            </View>
            <View
              style={Object {}}
            >
              <Text
                style={
                  Object {
                    "color": "#3d3d3d",
                    "fontWeight": "600",
                  }
                }
              >
                bold
              </Text>
            </View>
            <Text
              style={
                Object {
                  "color": "#666",
                  "fontSize": 10,
                  "paddingTop": 0,
                }
              }
            >
              Used for bolded body text.
            </Text>
          </View>
          <View
            style={
              Object {
                "backgroundColor": "#fff",
                "padding": 10,
              }
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "#1d1d1d",
                  "flex": 1,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#ffffff",
                    "fontFamily": "Montserrat",
                    "fontSize": 15,
                    "fontWeight": "bold",
                  }
                }
              >
                Osnap! I'm puffy.
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "backgroundColor": "#eee",
            }
          }
        >
          <View
            style={
              Object {
                "borderBottomColor": "#e6e6e6",
                "borderBottomWidth": 1,
                "paddingBottom": 10,
                "paddingHorizontal": 10,
                "paddingTop": 20,
              }
            }
          >
            <View
              style={
                Object {
                  "borderTopColor": "#e6e6e6",
                  "borderTopWidth": 1,
                  "flexDirection": "row",
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#666",
                    "fontSize": 10,
                    "paddingBottom": 2,
                    "paddingHorizontal": 4,
                  }
                }
              >
                Use Case
              </Text>
            </View>
            <View
              style={Object {}}
            >
              <Text
                style={
                  Object {
                    "color": "#3d3d3d",
                    "fontWeight": "600",
                  }
                }
              >
                header
              </Text>
            </View>
            <Text
              style={
                Object {
                  "color": "#666",
                  "fontSize": 10,
                  "paddingTop": 0,
                }
              }
            >
              Used for major section headers.
            </Text>
          </View>
          <View
            style={
              Object {
                "backgroundColor": "#fff",
                "padding": 10,
              }
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "#1d1d1d",
                  "flex": 1,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#ffffff",
                    "fontFamily": "Montserrat",
                    "fontSize": 24,
                    "fontWeight": "bold",
                  }
                }
              >
                Behold!
              </Text>
            </View>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </View>
</View>
`;

exports[`Storyshots Text Styling 1`] = `
<View
  onLayout={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "#f0f0f0",
        "flex": 1,
      },
      Object {
        "paddingBottom": 0,
      },
    ]
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <RCTScrollView>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#eee",
            }
          }
        >
          <View
            style={
              Object {
                "borderBottomColor": "#e6e6e6",
                "borderBottomWidth": 1,
                "paddingBottom": 10,
                "paddingHorizontal": 10,
                "paddingTop": 20,
              }
            }
          >
            <View
              style={
                Object {
                  "borderTopColor": "#e6e6e6",
                  "borderTopWidth": 1,
                  "flexDirection": "row",
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#666",
                    "fontSize": 10,
                    "paddingBottom": 2,
                    "paddingHorizontal": 4,
                  }
                }
              >
                Use Case
              </Text>
            </View>
            <View
              style={Object {}}
            >
              <Text
                style={
                  Object {
                    "color": "#3d3d3d",
                    "fontWeight": "600",
                  }
                }
              >
                Style array
              </Text>
            </View>
            <Text
              style={
                Object {
                  "color": "#666",
                  "fontSize": 10,
                  "paddingTop": 0,
                }
              }
            >
              Text with style array
            </Text>
          </View>
          <View
            style={
              Object {
                "backgroundColor": "#fff",
                "padding": 10,
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "backgroundColor": "#1d1d1d",
                    "flex": 1,
                  },
                  Object {
                    "backgroundColor": "#7fff00",
                  },
                ]
              }
            >
              <Text
                style={
                  Object {
                    "color": "#ffffff",
                    "fontFamily": "Montserrat",
                    "fontSize": 15,
                  }
                }
              >
                 
                Hello 
                <Text
                  style={
                    Object {
                      "color": "#ffffff",
                      "fontFamily": "Montserrat",
                      "fontSize": 15,
                      "fontWeight": "bold",
                    }
                  }
                >
                  bolded
                </Text>
                 World.
              </Text>
            </View>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </View>
</View>
`;
